--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
                 <img src="/B9A1-New-Year-New-Mission/resources/Group 70.png" alt="">
                 
             </div>
+            <div class="section">
+                <main>
+                    <section>
+                        Place: New Park Hotel
+                        <br>
+                        Date: 31 December Night 2023
+                        <br>
+                       Time: Evening 7.30 pm to 12.30 am
+                    </section>
+                </main>
+            </div>
         </div>
         
 
